font color change due to contrast issue in lighthouse

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 }
 
 .homePage .book-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   color: white;
   border: none;
   padding: 15px 30px;
@@ -128,7 +128,7 @@
 
 .about_page h2 {
   letter-spacing: 2px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.5em;
 }
 
@@ -140,7 +140,7 @@
 }
 
 .about_page span {
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
 }
 
 .about_page p {
@@ -149,7 +149,7 @@
 }
 
 .about_page .book-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   color: white;
   border: none;
   padding: 15px 30px;
@@ -222,7 +222,7 @@
 
 .services_page h2 {
   letter-spacing: 2px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.5em;
 }
 
@@ -234,7 +234,7 @@
 }
 
 .services_page span {
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
 }
 
 .services_page p {
@@ -255,7 +255,7 @@
 }
 
 .services_page .book-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   color: white;
   border: none;
   padding: 15px 30px;
@@ -303,7 +303,7 @@
 
 .contact_page_header h2 {
   letter-spacing: 2px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.5em;
 }
 
@@ -315,7 +315,7 @@
 }
 
 .contact_page_header span {
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
 }
 
 .contact_page_header p {
@@ -324,7 +324,7 @@
 }
 
 .contact_page_header .book-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   color: white;
   border: none;
   padding: 15px 30px;
