--- a/src/components/Hours.css
+++ b/src/components/Hours.css
@@ -22,7 +22,7 @@
 
 .physio_hours h2 {
   letter-spacing: 2px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.3em;
 }
 
