--- a/src/components/HowWeHelp.css
+++ b/src/components/HowWeHelp.css
@@ -22,7 +22,7 @@
 }
 
 .how_we_help_card .book-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   color: white;
   border: none;
   padding: 15px 30px;
