--- a/src/components/PhysioServices.css
+++ b/src/components/PhysioServices.css
@@ -1,6 +1,6 @@
 .howWeHelp {
   letter-spacing: 4px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.5em;
 }
 
