--- a/src/components/Prices.css
+++ b/src/components/Prices.css
@@ -4,7 +4,7 @@
 
 .prices_section h2 {
   letter-spacing: 2px;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
   font-size: 1.5em;
   padding-bottom: 15px;
 }
