--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -9,7 +9,7 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: rgb(0, 165, 206);
+  background: rgb(0, 147, 184);
 }
 
 /* Color/shape of burger icon bars on hover*/
