--- a/src/components/WhyChooseUs.css
+++ b/src/components/WhyChooseUs.css
@@ -46,7 +46,7 @@
 
 .why_choose_icon {
   font-size: 8em;
-  color: rgb(0, 165, 206);
+  color: rgb(0, 147, 184);
 }
 
 @media (max-width: 991px) {
