--- a/src/components/readMoreModal.css
+++ b/src/components/readMoreModal.css
@@ -1,5 +1,5 @@
 .modal-button {
-  background-color: rgb(0, 165, 206);
+  background-color: rgb(0, 147, 184);
   width: 100%;
   border: none;
 }
